...
            .padding(paddingValues)
    ) {
        if (viewModel.State.Loading) {
            LinearProgressIndicator(
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("ProgressIndicator")
            )
        }

        when {
            viewModel.State.LoadingError -> {
                ErrorLabel(R.string.ErrorLoadingFiles)
            }
            !viewModel.State.Loading && viewModel.State.Backups.isEmpty() -> {
                ErrorLabel(R.string.NoFiles)
            }
            else -> {
                LazyColumn(
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(8.dp)
                        .testTag("HistoryList"),
                    state = viewModel.ListState
                ) {
                    items(viewModel.State.Backups) { detail ->
                        FileItem(
                            detail = detail,
                            deleteItem = {
...
                onDismissRequest = {
                    menuExpanded = false
                },
            ) {
                DropdownMenuItem(
                    modifier = Modifier
                        .testTag("DeleteMenuItem"),
                    onClick = {
                        deleteItem()

                        menuExpanded = false
                    },
                    contentPadding = PaddingValues(
...
                        )
                    )
                }

                DropdownMenuItem(
                    modifier = Modifier
                        .testTag("RestoreMenuItem"),
                    onClick = {
                        restoreItem()

                        menuExpanded = false
                    },
                    contentPadding = PaddingValues(
...
    dismissDialog: () -> Unit,
    confirmDialog: () -> Unit
) {
    if (isShown) {
        AlertDialog(
            modifier = Modifier
                .testTag("DeleteDialog"),
            onDismissRequest = dismissDialog,
            title = {
                Text(
                    text = stringResource(
                        id = R.string.SureQuestion
                    )
...
                    )
                )
            },
            dismissButton = {
                TextButton(
                    modifier = Modifier
                        .testTag("DeleteDialogCancel"),
                    onClick = dismissDialog
                ) {
                    Text(
                        text = stringResource(
                            id = R.string.Cancel
                        )
                    )
                }
            },
            confirmButton = {
                TextButton(
                    modifier = Modifier
                        .testTag("DeleteDialogYes"),
                    onClick = confirmDialog
                ) {
                    Text(
                        text = stringResource(
                            id = R.string.Yes
                        )
...
    dismissDialog: () -> Unit,
    confirmDialog: () -> Unit
) {
    if (isShown) {
        AlertDialog(
            modifier = Modifier
                .testTag("RestoreDialog"),
            onDismissRequest = dismissDialog,
            title = {
                Text(
                    text = stringResource(
                        id = R.string.SureQuestion
                    )
...
                    )
                )
            },
            dismissButton = {
                TextButton(
                    modifier = Modifier
                        .testTag("RestoreDialogCancel"),
                    onClick = dismissDialog
                ) {
                    Text(
                        text = stringResource(
                            id = R.string.Cancel
                        )
                    )
                }
            },
            confirmButton = {
                TextButton(
                    modifier = Modifier
                        .testTag("RestoreDialogYes"),
                    onClick = confirmDialog
                ) {
                    Text(
                        text = stringResource(
                            id = R.string.Yes
                        )
...
    if (isShown) {
        Dialog(
            onDismissRequest = {}
        ) {
            Card(
                modifier = Modifier
                    .testTag("CurrentlyRestoringDialog"),
            ) {
                Row(
                    verticalAlignment = Alignment.CenterVertically
                ) {
                    CircularProgressIndicator(
                        modifier = Modifier
...
