...
            PathConfigurationCard(
                onClick = {
                    viewModel.OnEvent(ConnectionConfigurationEvent.OnConfigurePathsClicked)
                }
            )

            ScheduleTypeCard(
                selectedScheduleType = viewModel.State.SelectedScheduleType,
                onSelectionChange = {
                    viewModel.OnEvent(
                        ConnectionConfigurationEvent.OnSelectedScheduleTypeChange(
                            it
                        )
...
                        )
                    )
                }

                DropdownMenuItem(
                    modifier = Modifier
                        .testTag("MonthlyMenuItem"),
                    onClick = {
                        onSelectionChange(ScheduleType.MONTHLY)
                        menuExpanded = false
                    },
                    contentPadding = PaddingValues(
                        4.dp,
...
                        )
                    )
                }

                DropdownMenuItem(
                    modifier = Modifier
                        .testTag("YearlyMenuItem"),
                    onClick = {
                        onSelectionChange(ScheduleType.YEARLY)
                        menuExpanded = false
                    },
                    contentPadding = PaddingValues(
                        4.dp,
...
